edition = "2023";  // successor to proto2 and proto3

package v1;

import "api/v1/common.proto";
import "api/v1/empty.proto";
import weak "google/api/annotations.proto";
import "google/protobuf/go_features.proto";

option go_package = "./api/v1;v1";
option java_package = "io.stackrox.proto.api.v1";
option features.(pb.go).api_level = API_HYBRID;

service ReportService {
  rpc RunReport(ResourceByID) returns (Empty) {
    option (google.api.http) = {post: "/v1/report/run/{id}"};
  }
}
